tests/error/invalid_until.gw
// [contains] in 'until' condition
until(NULL);
